Changes to support Java 8 and bump version to 1.4.0